# sui-localnet

./: .gitignore  docker-compose.yml
.github/workflows/: publish-seal.yml  publish-sui.yml  publish-walrus.yml
bins/: Dockerfile.seal  Dockerfile.sui  Dockerfile.walrus
bins/seal-keygen/: Cargo.toml
bins/seal-keygen/src/: main.rs
e2e-tests/: package-lock.json  package.json  vitest.config.ts
e2e-tests/src/: committee.test.ts  docker.ts  helpers.ts  independent.test.ts  policy-bytecode.ts  walrus-rest-api-ports.test.ts
localnet/: Dockerfile  entrypoint.sh
seal-server/: Dockerfile  deploy_committee.sh  deploy_seal.sh  faucet.sh  run.sh  run_committee.sh  run_independent.sh  wait_for_localnet.sh
walrus/: Dockerfile  empty_sui_config.yaml  local-testbed.sh  run.sh
